# cidr_man

./: .gitignore  .gitlab-ci.yml  Readme.md  pyproject.toml
cidr_man/: __init__.py  cidr.py
tests/: cidrman_vs_builtin_profile.py  profile.py  test_cidr.py  test_flags.py  test_subnets.py
