[tool.poetry]
name = "CIDR-Man"
version = "1.0.0"
description = "CIDR-Man is a high-performance ipaddress subnetting library designed to replace the built-in ipaddress library."
authors = ["Tim Armstrong <tim@plaintextnerds.com>"]
maintainers = ["Tim Armstrong <tim@plaintextnerds.com>"]
license = "MIT"
readme = "Readme.md"
homepage = "https://geoip.network/"
repository = "https://gitlab.com/geoip.network/cidr_man"
classifiers = [
    "Programming Language :: Python :: Implementation",
    "Topic :: Internet",
    "Topic :: System :: Networking",
    "Topic :: System :: Networking",
    "Topic :: System :: Networking :: Firewalls",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Telecommunications Industry",
]
keywords = [
    "cidr",
    "routing",
    "IPv6",
    "IPv4",
    "Networking",
    "Network"
]
include = ["cidr_bottle"]

[tool.poetry.dependencies]
python = "^3.9,<3.11"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
